--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-dropdown-picker": "^5.1.19",
     "react-native-dynamic-search-bar": "^2.0.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^4.0.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-onboarding-animate": "^1.2.4",
     "react-native-reanimated": "^2.1.0",
